2007-10-18  Lluis Sanchez Gual <lluis@novell.com> 

	* Diff/Diff.mdp, DiffWidget/DiffWidget.mdp,
	  MonoDevelop.VersionControl.Subversion/gtk-gui/gui.stetic,
	  MonoDevelop.VersionControl.Subversion/gtk-gui/MonoDevelop.VersionControl.Subversion.Gui.SslServerTrustDialog.cs,
	  MonoDevelop.VersionControl/MonoDevelop.VersionControl.mdp,
	  VersionControl.mds: Flush

2007-10-10  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/LibSvnClient.cs:
	  Added some new pinvokes.
	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SvnClient.cs,
	  MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion.Gui/SslServerTrustDialog.cs:
	  Call config_ensure when initializing the svn client to make sure all
	  config directories are properly created, and that authentication data
	  can be saved. Handle the case when the user cancels the server
	  certificate validation. Based on a patch by Grzegorz Sobanski. Fixes bug
	  #324640.

2007-10-05  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/LibSvnClient.cs:
	  Fix formatting.
	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SvnClient.cs:
	  Error objects returned by authentification handlers must be allocated in
	  its own memory pool. Fixes bug #328035.

2007-10-03  Grzegorz Sobański <silk@boktor.net>

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SvnClient.cs:
	  Changed the order of password and certs providers to first use the
	  subversion ones - to use the same credentials that command line client
	  (from ~/.subversion directory). It fixes bug #325538 too.

2007-10-03  Zach Lute <zach.lute@gmail.com>

	* MonoDevelop.VersionControl/MonoDevelop.VersionControl.Views/Diffs.cs:  Only dispose of
	  FileSystemWatchers if they were actually created. (Bug #330505)
