@@ -9,7 +9,8 @@ REFS =  \
 	-r:$(top_builddir)/build/bin/MonoDevelop.Components.dll \
 	-r:$(top_builddir)/build/bin/MonoDevelop.Core.dll \
 	-r:$(top_builddir)/build/bin/MonoDevelop.Projects.dll \
-	-r:Mono.Posix
+	-r:Mono.Posix \
+	-r:System
 
 FILES =  \
 	gtk-gui/generated.cs \
