@@ -4,7 +4,7 @@
       <Output directory="../../../build/AddIns/VersionControl" assembly="MonoDevelop.VersionControl.Subversion" />
       <Build debugmode="True" target="Library" />
       <Execution runwithwarnings="True" consolepause="True" runtime="MsNet" clr-version="Net_2_0" />
-      <CodeGeneration compiler="Csc" warninglevel="4" optimize="False" unsafecodeallowed="True" generateoverflowchecks="True" mainclass="" generatexmldocumentation="False" win32Icon="./" ctype="CSharpCompilerParameters" />
+      <CodeGeneration compiler="Csc" warninglevel="3" optimize="False" unsafecodeallowed="True" generateoverflowchecks="True" mainclass="" generatexmldocumentation="False" win32Icon="." ctype="CSharpCompilerParameters" />
     </Configuration>
     <Configuration name="Release" ctype="DotNetProjectConfiguration">
       <Output directory="../../../build/AddIns/VersionControl" assembly="MonoDevelop.VersionControl.Subversion" />
@@ -14,24 +14,24 @@
     </Configuration>
   </Configurations>
   <Contents>
-    <File name="./gtk-gui/generated.cs" subtype="Code" buildaction="Compile" />
-    <File name="./MonoDevelop.VersionControl.Subversion/SubversionRepository.cs" subtype="Code" buildaction="Compile" />
-    <File name="./MonoDevelop.VersionControl.Subversion/SubversionVersionControl.cs" subtype="Code" buildaction="Compile" />
-    <File name="./MonoDevelop.VersionControl.Subversion/SvnClient.cs" subtype="Code" buildaction="Compile" />
-    <File name="./MonoDevelop.VersionControl.Subversion/LibApr.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Makefile.am" subtype="Code" buildaction="Nothing" />
-    <File name="./MonoDevelop.VersionControl.Subversion.addin.xml" subtype="Code" buildaction="EmbedAsResource" />
-    <File name="./gtk-gui/objects.xml" subtype="Code" buildaction="EmbedAsResource" />
-    <File name="./gtk-gui/gui.stetic" subtype="Code" buildaction="EmbedAsResource" />
-    <File name="./MonoDevelop.VersionControl.Subversion.Gui/ClientCertificateDialog.cs" subtype="Code" buildaction="Compile" />
-    <File name="./MonoDevelop.VersionControl.Subversion.Gui/ClientCertificatePasswordDialog.cs" subtype="Code" buildaction="Compile" />
-    <File name="./MonoDevelop.VersionControl.Subversion.Gui/SslServerTrustDialog.cs" subtype="Code" buildaction="Compile" />
-    <File name="./MonoDevelop.VersionControl.Subversion.Gui/UserPasswordDialog.cs" subtype="Code" buildaction="Compile" />
-    <File name="./gtk-gui/MonoDevelop.VersionControl.Subversion.Gui.ClientCertificateDialog.cs" subtype="Code" buildaction="Compile" />
-    <File name="./gtk-gui/MonoDevelop.VersionControl.Subversion.Gui.ClientCertificatePasswordDialog.cs" subtype="Code" buildaction="Compile" />
-    <File name="./gtk-gui/MonoDevelop.VersionControl.Subversion.Gui.SslServerTrustDialog.cs" subtype="Code" buildaction="Compile" />
-    <File name="./gtk-gui/MonoDevelop.VersionControl.Subversion.Gui.UserPasswordDialog.cs" subtype="Code" buildaction="Compile" />
-    <File name="./MonoDevelop.VersionControl.Subversion/LibSvnClient.cs" subtype="Code" buildaction="Compile" />
+    <File name="gtk-gui/generated.cs" subtype="Code" buildaction="Compile" />
+    <File name="MonoDevelop.VersionControl.Subversion/SubversionRepository.cs" subtype="Code" buildaction="Compile" />
+    <File name="MonoDevelop.VersionControl.Subversion/SubversionVersionControl.cs" subtype="Code" buildaction="Compile" />
+    <File name="MonoDevelop.VersionControl.Subversion/SvnClient.cs" subtype="Code" buildaction="Compile" />
+    <File name="MonoDevelop.VersionControl.Subversion/LibApr.cs" subtype="Code" buildaction="Compile" />
+    <File name="Makefile.am" subtype="Code" buildaction="Nothing" />
+    <File name="MonoDevelop.VersionControl.Subversion.addin.xml" subtype="Code" buildaction="EmbedAsResource" />
+    <File name="gtk-gui/objects.xml" subtype="Code" buildaction="EmbedAsResource" />
+    <File name="gtk-gui/gui.stetic" subtype="Code" buildaction="EmbedAsResource" />
+    <File name="MonoDevelop.VersionControl.Subversion.Gui/ClientCertificateDialog.cs" subtype="Code" buildaction="Compile" />
+    <File name="MonoDevelop.VersionControl.Subversion.Gui/ClientCertificatePasswordDialog.cs" subtype="Code" buildaction="Compile" />
+    <File name="MonoDevelop.VersionControl.Subversion.Gui/SslServerTrustDialog.cs" subtype="Code" buildaction="Compile" />
+    <File name="MonoDevelop.VersionControl.Subversion.Gui/UserPasswordDialog.cs" subtype="Code" buildaction="Compile" />
+    <File name="gtk-gui/MonoDevelop.VersionControl.Subversion.Gui.ClientCertificateDialog.cs" subtype="Code" buildaction="Compile" />
+    <File name="gtk-gui/MonoDevelop.VersionControl.Subversion.Gui.ClientCertificatePasswordDialog.cs" subtype="Code" buildaction="Compile" />
+    <File name="gtk-gui/MonoDevelop.VersionControl.Subversion.Gui.SslServerTrustDialog.cs" subtype="Code" buildaction="Compile" />
+    <File name="gtk-gui/MonoDevelop.VersionControl.Subversion.Gui.UserPasswordDialog.cs" subtype="Code" buildaction="Compile" />
+    <File name="MonoDevelop.VersionControl.Subversion/LibSvnClient.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Project" localcopy="False" refto="MonoDevelop.Core" />
@@ -44,6 +44,7 @@
     <ProjectReference type="Gac" localcopy="True" refto="atk-sharp, Version=2.8.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <ProjectReference type="Gac" localcopy="True" refto="gdk-sharp, Version=2.8.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <ProjectReference type="Gac" localcopy="True" refto="gtk-sharp, Version=2.8.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+    <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   </References>
   <MonoDevelop.Autotools.MakefileInfo IntegrationEnabled="True" RelativeMakefileName="./Makefile.am" BuildTargetName="" CleanTargetName="" SyncReferences="True" IsAutotoolsProject="True" RelativeConfigureInPath="../../../">
     <BuildFilesVar Sync="True" Name="FILES" />
